[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "polars>=1.33.1",
    "polars-ols>=0.3.5",
    "pyarrow>=21.0.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "uvicorn>=0.37.0",
]
